welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:31: error: Unmatched closing brace '}' ignored here
	droite();avance(2);gauche();avance(2);gauche();avance();droite();droite();faireFleur(Color.ORANGE)}
                                                                                                          ^FlowerCase:46: error: Unmatched closing brace '}' ignored here
}
^